--- a/res/mee_configsolvers_gui.ui
+++ b/res/mee_configsolvers_gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>567</width>
-    <height>267</height>
+    <width>461</width>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>0</y>
-     <width>551</width>
-     <height>261</height>
+     <y>10</y>
+     <width>441</width>
+     <height>231</height>
     </rect>
    </property>
    <property name="title">
@@ -30,7 +30,7 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>531</width>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -63,11 +63,14 @@
      <rect>
       <x>10</x>
       <y>50</y>
-      <width>531</width>
-      <height>181</height>
+      <width>421</width>
+      <height>141</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_4">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMinAndMaxSize</enum>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
@@ -203,24 +206,24 @@
    <widget class="QWidget" name="layoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>230</y>
+      <x>76</x>
+      <y>190</y>
       <width>291</width>
-      <height>21</height>
+      <height>41</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_5">
-     <item row="0" column="0">
-      <widget class="QToolButton" name="btn_saveConfig">
+     <item row="0" column="1">
+      <widget class="QPushButton" name="btnLoadConfig">
        <property name="text">
-        <string>Save Configuration</string>
+        <string>Load Configuration</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QToolButton" name="btn_loadConfig">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="btnSaveConfig">
        <property name="text">
-        <string>Load Configuration</string>
+        <string>Save Configuration</string>
        </property>
       </widget>
      </item>
